--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta http-equiv="refresh" content="5" url="https://ntsc-yrx.github.io/Menu">
+	<meta http-equiv="refresh" content="5; url=https://ntsc-yrx.github.io/Menu">
 
 
-  <title>Ntsc-Yrx Web Map</title>
+  <title>Ntsc文件 - 主页</title>
 </head>
-<body background="https://pximg.rainchan.win/" text="#585858">
+<body text="#585858">
 	<h1 align="center">NtscFile</h1>
 	<h3 align="center">Ntsc网站在线文件存储 - 主页</h3>
 	<p align="center" style="text-decoration: underline">https://ntsc-yrx.github.io/File</p>
