--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<hr>
 	<i><p id="hitokoto" align="center"><a href="#" id="hitokoto_text">:D 获取中...</a></p>
  <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script></i>
+<p align="center" style="font-size: 16px"><a href="https://ntsc-yrx.github.io/File/saying">我喜欢名言积累~点这里</a></p>
 	</body>
 </html>
