--- a/PICAPI/contact.html
+++ b/PICAPI/contact.html
@@ -70,8 +70,8 @@
 		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">PIC API</a></h1>
 		<ul>
 			<li><a href="index.html">主页 / Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="pricing.html">Pricing</a></li>
+			<li><a href="about.html">关于 / About</a></li>
+			<li><a href="pricing.html">友链 / Pricing</a></li>
 			<li class="active"><a href="contact.html">搜索 / Search</a></li>
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
