--- a/PICAPI/index.html
+++ b/PICAPI/index.html
@@ -8,6 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>PIC API - 主页</title>
+	<link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="图片API收集大全" />
 	<meta name="keywords" content="api, 图片" />
