--- a/PICAPI/index.html
+++ b/PICAPI/index.html
@@ -232,31 +232,31 @@
         	
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_22.jpg" class="image-popup fh5co-board-img"><img src="images/img_22.jpg" alt="这个PIC貌似走丢了..."></a>
-	        		<div class="fh5co-desc">图片 - Quos repellendus repudiandae debitis reprehenderit cupiditate cumque accusamus exercitationem, harum.</div>
+	        		<a href="https://api.paugram.com/wallpaper/" class="image-popup fh5co-board-img"><img src="https://api.paugram.com/wallpaper/" alt="这个PIC貌似走丢了..."></a>
+	        		<div class="fh5co-desc">图片 - 单人物</div>
         		</div>
         	</div>
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_23.jpg" class="image-popup fh5co-board-img"><img src="images/img_23.jpg" alt="这个PIC貌似走丢了..."></a>
+	        		<a href="https://api.btstu.cn/sjbz/api.php?lx=dongman&format=images" class="image-popup fh5co-board-img"><img src="https://api.btstu.cn/sjbz/api.php?lx=dongman&format=images" alt="这个PIC貌似走丢了..."></a>
 	        		<div class="fh5co-desc">图片 - Sunt numquam itaque delectus, dignissimos dolorem obcaecati vel, atque eos.</div>
         		</div>
         	</div>
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_24.jpg" class="image-popup fh5co-board-img"><img src="images/img_24.jpg" alt="这个PIC貌似走丢了..."></a>
+	        		<a href="https://api.mtyqx.cn/api/random.php" class="image-popup fh5co-board-img"><img src="https://api.mtyqx.cn/api/random.php" alt="这个PIC貌似走丢了..."></a>
 	        		<div class="fh5co-desc">图片 - Adipisci consequuntur ipsa fugit perspiciatis eligendi. Omnis blanditiis, totam placeat.</div>
         		</div>
         	</div>
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_25.jpg" class="image-popup fh5co-board-img"><img src="images/img_25.jpg" alt="这个PIC貌似走丢了..."></a>
-	        		<div class="fh5co-desc">图片 - Quos repellendus repudiandae debitis reprehenderit cupiditate cumque accusamus exercitationem, harum.</div>
+	        		<a href="https://api.yimian.xyz/img?type=wallpaper" class="image-popup fh5co-board-img"><img src="https://api.yimian.xyz/img?type=wallpaper" alt="这个PIC貌似走丢了..."></a>
+	        		<div class="fh5co-desc">图片 - 随机Bing图</div>
         		</div>
         	</div>
         	<div class="item">
         		<div class="animate-box">
-	        		<a href="images/img_26.jpg" class="image-popup fh5co-board-img"><img src="images/img_26.jpg" alt="这个PIC貌似走丢了..."></a>
+	        		<a href="https://acg.toubiec.cn/random.php" class="image-popup fh5co-board-img"><img src="https://acg.toubiec.cn/random.php" alt="这个PIC貌似走丢了..."></a>
 	        		<div class="fh5co-desc">图片 - Sunt numquam itaque delectus, dignissimos dolorem obcaecati vel, atque eos.</div>
         		</div>
         	</div>
