--- a/PICAPI/index.html
+++ b/PICAPI/index.html
@@ -70,9 +70,9 @@
 		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">PIC API</a></h1>
 		<ul>
 			<li class="active"><a href="index.html">主页 / Home</a></li>
-			<li><a href="about.html" target="_blank">关于 / About</a></li>
-			<li><a href="pricing.html" target="_blank">友链 / Pricing</a></li>
-			<li><a href="contact.html" target="_blank">搜索 / Search</a></li>
+			<li><a href="about.html" target"_blank">关于 / About</a></li>
+			<li><a href="pricing.html" target"_blank">友链 / Pricing</a></li>
+			<li><a href="contact.html" target"_blank">搜索 / Search</a></li>
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
 		<p class="fh5co-social-icons">
