--- a/PICAPI/about.html
+++ b/PICAPI/about.html
@@ -124,11 +124,11 @@
 					<h3>下载</h3>
 					你可以在这里下载我们的桌面版应用！					
 					<ul>
-						<li><a href="picapi.exe.abc">Windows版(x64)</a></li>
+						<li><a href="app/picapi_win64.zip">Windows版(x64)</a></li>
+						<li><a href="app/picapi_edge.txt">Edge版</a></li>
 						<li><a href="">Mac版</a></li>
 						<li><a href="">Linux版</a></li>
 					</ul>
-					注：下载完成后请删除文件末尾的 .abc
 				</div>
 				
         		
