--- a/PICAPI/about.html
+++ b/PICAPI/about.html
@@ -124,10 +124,10 @@
 					<h3>下载</h3>
 					你可以在这里下载我们的桌面版应用！					
 					<ul>
-						<li><a href="app/picapi_win64.zip">Windows版(x64)</a></li>
-						<li><a href="app/picapi_edge.txt">Edge版</a></li>
-						<li><a href="">Mac版</a></li>
-						<li><a href="">Linux版</a></li>
+						<li><a href="app/picapi_win64.zip">Windows版(x64)</a><br>特点：源码开放，加载项少，内容恒定（不自动更新）</li>
+						<li><a href="app/picapi_edge.txt">Edge版</a><br>特点：文件小（实测3KB），自动更新，Windows10特化</li>
+						<li><a href="">Mac版</a><br>特点：无文件</li>
+						<li><a href="">Linux版</a><br>特点：无文件</li>
 					</ul>
 				</div>
 				
