--- a/PICAPI/about.html
+++ b/PICAPI/about.html
@@ -128,6 +128,7 @@
 						<li><a href="app/picapi_edge.txt">Edge版</a><br>特点：文件小（实测3KB），自动更新，Windows10特化</li>
 						<li><a href="">Mac版</a><br>特点：无文件</li>
 						<li><a href="">Linux版</a><br>特点：无文件</li>
+						<li><a href="app/picapi_and.apk">Android版</a>特点:界面优美(可能会报告证书无效,因为作者无法上google领安全证书</li>
 					</ul>
 				</div>
 				
