--- a/PICAPI/index.html
+++ b/PICAPI/index.html
@@ -69,11 +69,12 @@
 		<a href="#" class="fh5co-offcanvass-close js-fh5co-offcanvass-close">Menu <i class="icon-cross"></i> </a>
 		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">PIC API</a></h1>
 		<ul>
-			<li class="active"><a href="index.html">主页 / Home</a></li>
-			<li class="active"><a href="https://ntsc-yrx.github.io/File/PICAPI">在线主页 / Home</a></li>
+			<li class="active"><a href="https://ntsc-yrx.github.io/File/PICAPI">主页 / Home</a></li>
 			<li><a href="about.html" target="_blank">关于 / About</a></li>
 			<li><a href="pricing.html" target="_blank">友链 / Pricing</a></li>
 			<li><a href="contact.html" target="_blank">搜索 / Search</a></li>
+			<br>
+			<li><a href="lab/index.html" target="_blank">实验室 / Lab</a></li>
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
 		<p class="fh5co-social-icons">
@@ -303,7 +304,7 @@
 						<a href="#"><i class="icon-dribbble"></i></a>
 						<a href="#"><i class="icon-youtube"></i></a>
 					</p>
-					<p><small>&copy; PIC API. All Rights Reserved. <br>All by: <a href="https://ntsc-yrx.github.io">ntsc-yrx</a> </small></p>
+					<p><small>&copy; PIC API. All Rights Reserved. <br>All by <a href="https://ntsc-yrx.github.io">ntsc-yrx</a> </small></p>
 				</div>
 			</div>
 		</div>
