--- a/PICAPI/lab/search2.html
+++ b/PICAPI/lab/search2.html
@@ -280,7 +280,7 @@ $("#src").click(function() {
 		var id=document.getElementById("ppid").value;
 		var api="<iframe src=\"https://api.ardor.one/illust/"+id+"\" style=\"width: 100%;height: 90%;\"></iframe>";
 		document.getElementById("api").innerHTML=api;
-		//window.open("https://api.ardor.one/illust/"+id+"");
+		window.open("https://api.ardor.one/illust/"+id+"");
 	}
 </script>
 </html>
