--- a/PICAPI/index.html
+++ b/PICAPI/index.html
@@ -74,6 +74,7 @@
 			<li><a href="pricing.html" target="_blank">友链 / Pricing</a></li>
 			<li><a href="contact.html" target="_blank">搜索 / Search</a></li>
 			<br>
+			<li><a href="mine.html" target="_blank">我的 / Mine</a></li>
 			<li><a href="lab/index.html" target="_blank">实验室 / Lab</a></li>
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
