--- a/PICAPI/mine.html
+++ b/PICAPI/mine.html
@@ -130,6 +130,8 @@
 					</div>
 				</div>	
 				</div>		
+				<a href="https://pixivel.moe/user?id=74650965" class="btn btn-block btn-sm btn-primary">推荐访问此网站（国内P站）（数据同步更新）</a>
+				<a href="" class="btn btn-block btn-sm btn-primary">以下更新时间 - 20211101</a>
 
 				<h2>我的作品</h2>
 					
@@ -158,6 +160,12 @@
 	        		<a href="https://pximg.rainchan.win/img?img_id=93810080" class="image-popup fh5co-board-img"><img src="https://pximg.rainchan.win/img?img_id=93810080" alt="这个PIC貌似走丢了..."></a>
         		</div>
         		<div class="fh5co-desc">图片 - PID:93810080</div>
+        	</div>
+			<div class="item">
+        		<div class="animate-box">
+	        		<a href="https://pximg.rainchan.win/img?img_id=93856764" class="image-popup fh5co-board-img"><img src="https://pximg.rainchan.win/img?img_id=93856764" alt="这个PIC貌似走丢了..."></a>
+        		</div>
+        		<div class="fh5co-desc">图片 - PID:93856764</div>
         	</div>
         </div>
         </div>
