--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta http-equiv="refresh" content="5; url=https://ntsc-yrx.github.io/Menu">
+	<meta http-equiv="refresh" content="5; url=https://ntsc-yrx.github.io/">
 
 
   <title>Ntsc文件 - 主页</title>
